--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,21 @@
+.roboto-normal {
+    font-family: "Roboto", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 100;
+    font-style: normal;
+    font-variation-settings: "width" 100;
+}
+
+.winky-rough-normal {
+    font-family: "Winky Rough", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+}
+
 * {
     box-sizing: border-box;
-
-    /* border: 1px solid blue; */
+    font-family: "Roboto", sans-serif, system-ui;
 }
 
 body {
@@ -58,7 +72,8 @@ body {
 
 .logo p {
     color: white;
-    font-size: 3rem;
+    font-size: 4rem;
+    font-family: "Winky Rough", sans-serif, system-ui;
 }
 
 .credit {
@@ -169,4 +184,18 @@ form button {
 
 label {
     font-size: 0.9rem;
+}
+
+input {
+    border: 1px solid gray;
+    border-radius: 3px;
+    box-shadow: 0px;
+}
+
+input:focus {
+    outline: 2px solid dodgerblue;
+}
+
+.password:invalid {
+    outline: 2px solid indianred;
 }
